--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,20 +8,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
 
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
-
+    <link rel="stylesheet" href="css/queries.css" />
     <script
       type="module"
-      src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"
-    ></script>
+      src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
     <script
       nomodule=""
-      src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"
-    ></script>
+      src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"></script>
 
     <title>Omnifood</title>
   </head>
@@ -79,8 +76,7 @@
             <img
               src="img/hero.png"
               class="hero-img"
-              alt="Woman enjoying food, meals in storage container, and food bowls on a table"
-            />
+              alt="Woman enjoying food, meals in storage container, and food bowls on a table" />
           </div>
         </div>
       </section>
@@ -92,12 +88,10 @@
             <img src="img/logos/techcrunch.png" alt="Techcrunch logo" />
             <img
               src="img/logos/business-insider.png"
-              alt="Business Insider logo"
-            />
+              alt="Business Insider logo" />
             <img
               src="img/logos/the-new-york-times.png"
-              alt="The New York Times logo"
-            />
+              alt="The New York Times logo" />
             <img src="img/logos/forbes.png" alt="Forbes logo" />
             <img src="img/logos/usa-today.png" alt="USA Today logo" />
           </div>
@@ -130,8 +124,7 @@
               src="img/app/app-screen-1.png"
               class="step-img"
               alt="iPhone app
-            preferences selection screen"
-            />
+            preferences selection screen" />
           </div>
 
           <div class="step-img-box">
@@ -139,8 +132,7 @@
               src="img/app/app-screen-2.png"
               class="step-img"
               alt="iPhone app
-            meal approving plan screen"
-            />
+            meal approving plan screen" />
           </div>
           <div class="step-text-box">
             <p class="step-number">02</p>
@@ -171,8 +163,7 @@
               src="img/app/app-screen-3.png"
               class="step-img"
               alt="iPhone app
-            delivery screen"
-            />
+            delivery screen" />
           </div>
         </div>
       </section>
@@ -190,8 +181,7 @@
             <img
               src="img/meals/meal-1.jpg"
               class="meal-img"
-              alt="Japanese Gyozas"
-            />
+              alt="Japanese Gyozas" />
             <div class="meal-content">
               <div class="meal-tags">
                 <span class="tag tag--vegetarian">Vegetariano</span>
@@ -205,8 +195,7 @@
                 <li class="meal-attribute">
                   <ion-icon
                     class="meal-icon"
-                    name="restaurant-outline"
-                  ></ion-icon>
+                    name="restaurant-outline"></ion-icon>
                   <span>NutriScore &reg; <strong>74</strong></span>
                 </li>
                 <li class="meal-attribute">
@@ -221,8 +210,7 @@
             <img
               src="img/meals/meal-2.jpg"
               class="meal-img"
-              alt="Avocado Salad"
-            />
+              alt="Avocado Salad" />
             <div class="meal-content">
               <div class="meal-tags">
                 <span class="tag tag--vegan">Vegano</span>
@@ -237,8 +225,7 @@
                 <li class="meal-attribute">
                   <ion-icon
                     class="meal-icon"
-                    name="restaurant-outline"
-                  ></ion-icon>
+                    name="restaurant-outline"></ion-icon>
                   <span>NutriScore &reg; <strong>92</strong></span>
                 </li>
                 <li class="meal-attribute">
@@ -309,8 +296,7 @@
               <img
                 class="testimonial-img"
                 alt="Photo of customer Dave Bryson"
-                src="img/customers/dave.jpg"
-              />
+                src="img/customers/dave.jpg" />
               <blockquote class="testimonial-text">
                 Refeições baratas, saudáveis e saborosas, sem sequer ter que
                 pedir manualmente! Parece verdadeiramente mágico.
@@ -322,8 +308,7 @@
               <img
                 class="testimonial-img"
                 alt="Photo of customer Ben Hadley"
-                src="img/customers/ben.jpg"
-              />
+                src="img/customers/ben.jpg" />
               <blockquote class="testimonial-text">
                 O algoritmo de IA é muito bom, ele escolhe as refeições certas
                 para eu toda vez. É incrível não se preocupar mais com comida!
@@ -335,8 +320,7 @@
               <img
                 class="testimonial-img"
                 alt="Photo of customer Steve Miller"
-                src="img/customers/steve.jpg"
-              />
+                src="img/customers/steve.jpg" />
               <blockquote class="testimonial-text">
                 Omnifood é um salva-vidas! Acabei de abrir uma empresa, então
                 não há sem tempo para cozinhar. Eu não poderia viver sem minhas
@@ -349,8 +333,7 @@
               <img
                 class="testimonial-img"
                 alt="Photo of customer Hannah Smith"
-                src="img/customers/hannah.jpg"
-              />
+                src="img/customers/hannah.jpg" />
               <blockquote class="testimonial-text">
                 Eu tenho Omnifood para toda a família, e isso libera muito
                 Tempo! Além disso, tudo é orgânico e vegano e sem plástico.
@@ -365,85 +348,73 @@
             <img
               src="img/gallery/gallery-1.jpg"
               alt="Photo of beautifully
-            arranged food"
-            />
+            arranged food" />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-2.jpg"
               alt="Photo of beautifully
-            arranged food"
-            />
+            arranged food" />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-3.jpg"
               alt="Photo of beautifully
-            arranged food"
-            />
+            arranged food" />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-4.jpg"
               alt="Photo of beautifully
-            arranged food"
-            />
+            arranged food" />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-5.jpg"
               alt="Photo of beautifully
-            arranged food"
-            />
+            arranged food" />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-6.jpg"
               alt="Photo of beautifully
-            arranged food"
-            />
+            arranged food" />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-7.jpg"
               alt="Photo of beautifully
-            arranged food"
-            />
+            arranged food" />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-8.jpg"
               alt="Photo of beautifully
-            arranged food"
-            />
+            arranged food" />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-9.jpg"
               alt="Photo of beautifully
-            arranged food"
-            />
+            arranged food" />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-10.jpg"
               alt="Photo of beautifully
-            arranged food"
-            />
+            arranged food" />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-11.jpg"
               alt="Photo of beautifully
-            arranged food"
-            />
+            arranged food" />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-12.jpg"
               alt="Photo of beautifully
-            arranged food"
-            />
+            arranged food" />
           </figure>
         </div>
       </section>
@@ -581,8 +552,7 @@
                     id="full-name"
                     type="text"
                     placeholder="John Smith"
-                    required
-                  />
+                    required />
                 </div>
 
                 <div>
@@ -591,8 +561,7 @@
                     id="email"
                     type="email"
                     placeholder="eu@exemplo.com"
-                    required
-                  />
+                    required />
                 </div>
 
                 <div>
@@ -610,16 +579,12 @@
                 </div>
 
                 <button class="btn btn--form">Registre-se agora</button>
-
-                <!-- <input type="checkbox" />
-                <input type="number" /> -->
               </form>
             </div>
             <div
               class="cta-img-box"
               role="img"
-              aria-label="Woman enjoying food"
-            ></div>
+              aria-label="Woman enjoying food"></div>
           </div>
         </div>
       </section>
